fixed wrapping text and made home cards fixed height

--- a/patterns/sections/contents.css
+++ b/patterns/sections/contents.css
@@ -55,21 +55,6 @@
   font-style: bold;
 }
 
-.content-icon {
-  max-width: 64px;
-  max-height: 64px;
-}
-
-.content-icon svg {
-  width: 100%;
-  height: 100%;
-}
-
-.icon-wrapper {
-  max-height: 64px;
-  max-width: 64px;
-}
-
-.icon-label-wrapper {
-
+.icon {
+  float: left;
 }
